--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@langchain/openai": "^0.3.14",
     "dotenv": "^16.4.7",
     "langchain": "^0.3.7",
+    "langsmith": "^0.2.13",
+    "openai": "^4.77.0",
     "zod": "^3.24.1"
   }
 }
