--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@langchain/ollama": "^0.1.3",
-    "langchain": "^0.3.7",
     "@langchain/core": "^0.3.23",
+    "@langchain/ollama": "^0.1.3",
+    "dotenv": "^16.4.7",
+    "langchain": "^0.3.7",
+    "langsmith": "^0.2.13",
+    "openai": "^4.77.0",
     "zod": "^3.24.1"
   }
 }
